[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
pyTelegramBotAPI = "^4.5.1"
yfinance = "^0.1.72"
pyttsx3 = "^2.90"
requests = "^2.28.1"
json5 = "^0.9.10"
newsapi = "^0.1.1"
telebot = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"